--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Math Drawer - GeoDraw</title>
+  <title>Vẽ Hình Toán Học - Natch</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -12,6 +12,7 @@
   <!-- ===== HEADER ===== -->
   <header id="header-app">
     <div class="header-title">NTBM</div>
+    <a href="introduction.html" style="display: block; color:rgb(61, 61, 61); background: rgb(212, 212, 212); margin: 5%; border-radius: 5px">Hướng Dẫn</a>
   </header>
 
   <!-- ===== MAIN LAYOUT ===== -->
@@ -144,10 +145,10 @@
 
   <!-- ===== CONTEXT MENU ===== -->
   <div id="context-menu" class="hidden" role="menu">
-    <div class="cm-item" data-cm="change-color">Change color</div>
-    <div class="cm-item" data-cm="toggle-dash">Toggle dashed</div>
-    <div class="cm-item" data-cm="delete">Delete</div>
-    <div class="cm-item" data-cm="rename-point">Rename point</div>
+    <div class="cm-item" data-cm="change-color">Đổi Màu</div>
+    <div class="cm-item" data-cm="toggle-dash">Chuyển Thành Nét Đứt</div>
+    <div class="cm-item delete" data-cm="delete">Xóa</div>
+    <div class="cm-item" data-cm="rename-point">Đặt Tên Điểm</div>
   </div>
 
   <!-- ===== SCRIPTS (giữ nguyên để không phá logic) ===== -->
