--- a/introduction.html
+++ b/introduction.html
@@ -14,11 +14,11 @@
 </head>
 <body>
 
-<h1>📘 Hướng Dẫn Sử Dụng Ứng Dụng Vẽ Hình Toán Học</h1>
+<h1> Hướng Dẫn Sử Dụng Ứng Dụng Vẽ Hình Toán Học</h1>
 <p>Ứng dụng vẽ hình toán học giúp bạn tạo các đối tượng hình học như điểm, đoạn thẳng, đường thẳng, đường tròn, văn bản và các mô hình hình học dựng sẵn. Giao diện được thiết kế đơn giản, trực quan và hoàn toàn bằng tiếng Việt để dễ sử dụng cho học sinh, giáo viên và người làm toán.</p>
 
 <hr>
-<h2>🧭 1. Giao Diện Chung</h2>
+<h2> 1. Giao Diện Chung</h2>
 <p>Ứng dụng gồm 2 khu vực chính:</p>
 <ul>
   <li><strong>Thanh công cụ bên trái</strong>: chứa các công cụ vẽ và danh sách hình có sẵn.</li>
@@ -26,7 +26,7 @@
 </ul>
 
 <hr>
-<h2>🛠️ 2. Các Công Cụ Trên Thanh Toolbar</h2>
+<h2> 2. Các Công Cụ Trên Thanh Toolbar</h2>
 <p>Mỗi công cụ tương ứng một kiểu đối tượng. Nhấp vào nút để kích hoạt công cụ.</p>
 
 <ul>
@@ -42,7 +42,7 @@
 </ul>
 
 <hr>
-<h2>🧩 3. Hình Có Sẵn</h2>
+<h2> 3. Hình Có Sẵn</h2>
 <p>Trong mục <strong>Hình Có Sẵn</strong>, bạn có thể chọn các mô hình dựng trước như:</p>
 <ul>
   <li>Hộp ABCD.A'B'C'D'</li>
@@ -54,20 +54,20 @@
 <p>Khi chọn, mô hình sẽ tự động được vẽ trên bảng.</p>
 
 <hr>
-<h2>🖱️ 4. Cách Thao Tác Trên Bảng Vẽ</h2>
-<h3>📌 Click trái</h3>
+<h2> 4. Cách Thao Tác Trên Bảng Vẽ</h2>
+<h3> Click trái</h3>
 <ul>
   <li>Tạo đối tượng (khi đang chọn công cụ vẽ).</li>
   <li>Chọn đối tượng (khi dùng công cụ <strong>Di Chuyển</strong> hoặc chế độ chọn).</li>
 </ul>
 
-<h3>📌 Kéo chuột</h3>
+<h3> Kéo chuột</h3>
 <ul>
   <li>Kéo điểm, kéo đoạn thẳng, kéo đường tròn để thay đổi vị trí.</li>
   <li>Kéo nền (khi dùng công cụ <strong>Di Chuyển</strong>).</li>
 </ul>
 
-<h3>📌 Chuột phải</h3>
+<h3> Chuột phải</h3>
 <p>Mở <strong>Menu Chuột Phải</strong> với các tùy chọn sau:</p>
 <ul>
   <li><strong>Đổi Màu</strong> — đổi màu đường hoặc điểm.</li>
@@ -77,7 +77,7 @@
 </ul>
 
 <hr>
-<h2>🎨 5. Thao Tác Với Đối Tượng Hình Học</h2>
+<h2> 5. Thao Tác Với Đối Tượng Hình Học</h2>
 <ul>
   <li>Nhấp để chọn đối tượng.</li>
   <li>Kéo để thay đổi vị trí.</li>
@@ -88,7 +88,7 @@
 
 
 <hr>
-<h2>🏁 Funny Project </h2>
+<h2> Funny Project </h2>
 <p>Deverlop by <span style="color: #0066cc;">IamNatch</span>
     <br>
     Facebook: <a href="https://www.facebook.com/binh.minh.nguyen.tu.2024/" target="_blank">https://www.facebook.com/binh.minh.nguyen.tu.2024/</a>
